# mate-screensaver

./: Makefile.am  configure.ac  mate-screensaver.spec  unix2_chkpwd.c
.gear/: rules
.gear/tags/: list
data/: mate-screensaver
helper/: Makefile.am  helper_proto.c  helper_proto.h  pam-helper.c
src/: Makefile.am  gs-auth-helper.c  gs-auth-pam.c  gs-auth-pam.h
